--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "element-plus": "^2.8.3",
     "fabric": "^6.0.0-beta.29",
+    "intro.js": "^8.3.2",
     "lodash-es": "^4.17.21",
     "pinia": "^2.2.4",
     "vue": "^3.5.11"
@@ -26,4 +27,3 @@
     "vite": "^5.4.8"
   }
 }
-
