--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fabric": "^6.0.0-beta.29",
     "intro.js": "^8.3.2",
     "lodash-es": "^4.17.21",
+    "marked": "^17.0.1",
     "pinia": "^2.2.4",
     "vue": "^3.5.11"
   },
