--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.vue"
+    "lint": "eslint . --ext .js,.vue",
+    "convert:csv": "python scripts/csv-to-json.py"
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
@@ -26,6 +27,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.29.1",
     "sass": "^1.80.4",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
